--- a/www/app/components/main/sheet-list.html
+++ b/www/app/components/main/sheet-list.html
@@ -7,7 +7,7 @@
                 width: 100%;
             }
             
-            .add-sheet {
+            #add-sheet {
                 position: fixed;
                 bottom: 16px;
                 right: 16px;
@@ -30,7 +30,7 @@
         
         <div id="space"></div>
 
-        <paper-fab class="add-sheet" noink icon="add" on-click="createSheet"></paper-fab>
+        <paper-fab id="add-sheet" noink icon="add" on-click="createSheet"></paper-fab>
     </template>
 </dom-module>
     
