--- a/www/app/components/sheet-creation/basic-tab.html
+++ b/www/app/components/sheet-creation/basic-tab.html
@@ -15,27 +15,32 @@
         
         <paper-input-container>
             <label>Nome</label>
-            <input is="iron-input" bind-value="{{name}}"> 
+            <input is="iron-input" 
+                   bind-value="{{name}}"> 
         </paper-input-container>
 
         <paper-input-container>
             <label>Classe</label>
-            <input is="iron-input" bind-value="{{job}}"> 
+            <input is="iron-input" 
+                   bind-value="{{job}}"> 
         </paper-input-container>
 
         <paper-input-container>
             <label>Raça</label>
-            <input is="iron-input" bind-value="{{race}}"> 
+            <input is="iron-input" 
+                   bind-value="{{race}}"> 
         </paper-input-container>
 
         <paper-input-container>
             <label>Level</label>
-            <input is="iron-input" bind-value="{{level}}"> 
+            <input is="iron-input" 
+                   bind-value="{{level}}"> 
         </paper-input-container>
 
         <paper-input-container>
             <label>Sistema</label>
-            <input is="iron-input" bind-value="{{system}}"> 
+            <input is="iron-input" 
+                   bind-value="{{system}}"> 
         </paper-input-container>
     </template>
 </dom-module>
