--- a/www/app/components/sheet-creation/status-card.html
+++ b/www/app/components/sheet-creation/status-card.html
@@ -24,17 +24,20 @@
             <div class="card-content">
                 <paper-input-container>
                     <label>Nome</label>
-                    <input is="iron-input" bind-value="{{ name }}"> 
+                    <input is="iron-input" 
+                           bind-value="{{ name }}"> 
                 </paper-input-container>
                 
                 <paper-input-container>
                     <label>Valor Inicial</label>
-                    <input is="iron-input" bind-value="{{ baseValue }}"> 
+                    <input is="iron-input"
+                           bind-value="{{ baseValue }}"> 
                 </paper-input-container>
                 
                 <paper-input-container>
                     <label>Modificador por Nivel</label>
-                    <input is="iron-input" bind-value="{{ levelModifier }}"> 
+                    <input is="iron-input"
+                           bind-value="{{ levelModifier }}"> 
                 </paper-input-container>
             </div>
         </paper-card>
