--- a/www/app/components/sheet-creation/sheet-creation.html
+++ b/www/app/components/sheet-creation/sheet-creation.html
@@ -10,25 +10,23 @@
             
             paper-tabs, paper-toolbar {
                 width: 100%;
-                z-index: 1;
+                z-index: 0;
                 position: fixed;
                 background-color: #9E9E9E;
                 color: #FFFFFF;
             }
         </style>
         
-        <iron-localstorage
-        name="localstorageSheetList"
-        value="{{ sheetList }}"
-        ></iron-localstorage>
+        <iron-localstorage name="localstorageSheetList"
+                           value="{{ sheetList }}"></iron-localstorage>
         
-        <iron-localstorage
-        name="localstorageBaseSheet"
-        value="{{ baseSheet }}"
-        on-iron-localstorage-load-empty="initializeDefaultBaseSheet"
-        ></iron-localstorage>
+        <iron-localstorage name="localstorageBaseSheet"
+                           value="{{ baseSheet }}"
+                           on-iron-localstorage-load-empty="initializeDefaultBaseSheet"></iron-localstorage>
         
-        <paper-tabs selected="{{ selected }}" noink scrollable>
+        <paper-tabs noink 
+                    scrollable
+                    selected="{{ selected }}">
             <paper-tab>Basico</paper-tab>
             <paper-tab>Status</paper-tab>
             <paper-tab>Recursos</paper-tab>
@@ -38,11 +36,16 @@
 
         <iron-pages selected="{{ selected }}">
             
-            <basic-tab name="{{ newSheet.name }}" job="{{ newSheet.job }}" race="{{ newSheet.race }}" level="{{ newSheet.level }}" system="{{ newSheet.system }}"></basic-tab>
+            <basic-tab name="{{ newSheet.name }}" 
+                       job="{{ newSheet.job }}" 
+                       race="{{ newSheet.race }}" 
+                       level="{{ newSheet.level }}" 
+                       system="{{ newSheet.system }}"></basic-tab>
             
             <status-tab status-list="{{ newSheet.statusList }}"></status-tab>
             
-            <resources-tab resources-list="{{ newSheet.resourcesList }}"></resources-tab>
+            <resources-tab resources-list="{{ newSheet.resourcesList }}" 
+                           status-list="{{ newSheet.statusList }}"></resources-tab>
             
             <div>Defenses</div>
             
@@ -79,11 +82,10 @@
         },
         _baseSheetChanged: function(e){
             console.log('Base Sheet Changed');
-            console.log(this.baseSheet);
             if(typeof this.newSheet == 'undefined'){
+                //this.newSheet = Object.create(this.baseSheet);
                 this.newSheet = Object.assign({}, this.baseSheet);
-                console.log('New Sheet');
-                console.log(this.newSheet);
+                console.log('New Sheet Assigned as Base Sheet');
             }
         },
         _modelUpdated: function(e){
